--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -1,13 +1,24 @@
+<!-- This is the base layout for all (most?) pages. -->
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-    <!-- Stylesheets go here -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{{title}}</title>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  {{#each styles}}
+  <link rel="stylesheet" href="/css/{{this}}">
+  {{/each}}
 </head>
+
 <body>
-    {{{body}}}
+  {{{body}}}
+
+  {{#each scripts}}
+  <script type="module" src="/js/{{this}}"></script>
+  {{/each}}
 </body>
+
 </html>
