--- a/views/sample.hbs
+++ b/views/sample.hbs
@@ -1,4 +1,5 @@
 <div id="sample-page">
-  <h1 align="center">Hello, World!</h1>
+  <h1 align="center">"Hello, World"</h1>
+  {{> sample-partial}}
   {{> sample-partial}}
 </div>
