--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,10 +2,21 @@
  * Only include style that is always used, if any.
  */
 
+/* Global CSS variables */
+:root {
+  --primary: #6e2a73;
+  --confirm: #238636;
+  --danger: #f85149;
+  --heading: 32px;
+  --body: 16px;
+  --small: 14px;
+}
+
 html {
   box-sizing: border-box;
 
-  background-color: rgb(10, 20, 20);
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: black;
 }
 *, *:before, *:after {
   min-width: 0;
