--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-  <img src="https://via.placeholder.com/150x40?text=" alt="Logo">
+  <!-- <img src="https://via.placeholder.com/150x40?text=" alt="Logo"> -->
   <nav>
     <a href="/">Home</a>
     <a href="/resources">Resources</a>
