--- a/views/register.hbs
+++ b/views/register.hbs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/register.css">
 </head>
 <body>
+<h1 align="center"></h1>
 <div class="container">
     <div class="content">
         <h1>Register</h1>
