--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,7 +26,6 @@ html {
 /* public/css/header.css */
 header {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   background-color: white;
   padding: 10px 20px;
@@ -37,6 +36,8 @@ header img {
 }
 nav {
   display: flex;
+  margin-left: auto;
+  margin-right: auto;
   gap: 20px;
 }
 nav a {
@@ -45,13 +46,14 @@ nav a {
   font-weight: 500;
 }
 .login-button {
-  background-color: #28a745;
+  background-color: #ffffff;
   color: white;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
 }
+
 
 /* public/css/styles.css */
 body {
@@ -95,4 +97,24 @@ body {
   height: 400px;
   background-color: #555;
   border-radius: 20px;
+}
+
+/* page layout  */
+
+#page-layout {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.375rem;
+  box-shadow: 0 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.2);
+
+  color: black;
+  
+  position: absolute;
+  top: 10rem;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 25rem;
+  padding: 2rem;
+
+  text-transform: uppercase;
 }
