--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
+
+  <h1 align="center"></h1>
+
 <div class="container">
-    <div class="content">
+    <div class="page-layout">
         <h1>Login</h1>
         <form id="loginForm" method="POST" action="/login">
             <input type="email" name="email" placeholder="Email">
