--- a/public/css/register.css
+++ b/public/css/register.css
@@ -12,7 +12,7 @@
     font-size: era 36px;
     margin-bottom: 20px;
   }
-  .content form {
+  .content div {
     display: flex;
     flex-direction: column;
   }
