--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,20 +9,25 @@
     <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
-
-  <h1 align="center"></h1>
-
+<h1></h1>
 <div class="container">
-    <div class="page-layout">
+    <div class="content">
         <h1>Login</h1>
-        <form id="loginForm" method="POST" action="/login">
-            <input type="email" name="email" placeholder="Email">
-            <input type="password" name="password" placeholder="Password">
-        <button type="submit">Login</button>
-        <button id="googleSignIn">Sign in with Google</button>
-        </form>
+            <input type="email" id="email" placeholder="Email">
+            <input type="password" id="password" placeholder="Password">
+        <button onclick= "login()">Login</button>
         <p>Don't have an account? <a href="/register">Register here</a></p>
     </div>
 </div>
 </body>
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+
+    <!-- Our script must be loaded after firebase references -->
+    <script src="/js/login.js"></script>
 </html>
