--- a/public/css/header.css
+++ b/public/css/header.css
@@ -19,7 +19,7 @@ header {
   nav a {
     text-decoration: none;
     color: #333;
-    font-weight: 500;
+    font-weight: 32rem;
   }
   
   .login-button {
