--- a/views/res-req.hbs
+++ b/views/res-req.hbs
@@ -24,17 +24,17 @@
                 <label for="contact">Contact Details (Email):</label>
                 <input type="email" id="contact" name="contact" placeholder="someone@gmail.com" required>
 
-                {{!-- <label for="dg_method">Data Gathering Method:</label>
-                <input type="text" id="dg_method" name="dg_method" placeholder="Qualitative/Quantitative" required> --}}
-
                 <label for="dg_method">Data Gathering Method:</label>
                 <select id="dg_method" name="dg_method" required>
                     <option value="Qualitative">Qualitative</option>
                     <option value="Quantitative">Quantitative</option>
                 </select>
 
+                <label for="typeOfParticipation">Type of Participation:</label>
+                <input type="text" id="typeOfParticipation" name="typeOfParticipation" placeholder="Survery, Interview, etc." required>
+
                 <label for="dg_link">Forms Link:</label>
-                <input type="url" id="dg_link" name="dg_link" placeholder="Enter Link" required>
+                <input type="url" id="dg_link" name="dg_link" placeholder="(For Surveys) Enter Link">
 
                 <label for="start_date">Start Date:</label>
                 <input type="date" id="start_date" name="start_date" required>
