--- a/views/res-req.hbs
+++ b/views/res-req.hbs
@@ -31,7 +31,7 @@
                 </select>
 
                 <label for="typeOfParticipation">Type of Participation:</label>
-                <input type="text" id="typeOfParticipation" name="typeOfParticipation" placeholder="Survery, Interview, etc." required>
+                <input type="text" id="typeOfParticipation" name="typeOfParticipation" placeholder="Survey, Interview, etc." required>
 
                 <label for="dg_link">Forms Link:</label>
                 <input type="url" id="dg_link" name="dg_link" placeholder="(For Surveys) Enter Link">
@@ -50,6 +50,6 @@
 </body>
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
-<script type="module" src="/js/res-req.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+<script src="/js/res-req.js"></script>
 </html>
