--- a/views/res-resources.hbs
+++ b/views/res-resources.hbs
@@ -28,7 +28,6 @@
                 </div>
                 <input type="text" class="search-input" placeholder="Enter keywords you are looking for">
                 <button class="search-button"><i class="fa fa-search"></i></button>
-                
             </div>
         </section>
         <section class="research-list">
@@ -43,8 +42,10 @@
         </section>
     </main>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
-    <script type="module" src="/js/res-resources.js"></script>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js";
+        import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js";
+        import '/js/res-resources.js';
+    </script>
 </body>
 </html>
