--- a/views/login.hbs
+++ b/views/login.hbs
@@ -13,20 +13,40 @@
 <div class="container">
     <div class="content">
         <h1>Login</h1>
-        <input type="email" id="email" placeholder="Email">
-        <input type="password" id="password" placeholder="Password">
+        <input type="email" id="email" placeholder="Email" required>
+        <input type="password" id="password" placeholder="Password" required>
         <button id="loginButton">Login</button>
         <p>Don't have an account? <a href="/register">Register here</a></p>
     </div>
 </div>
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+<!-- Add Firebase products that you want to use -->
+<script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js";
+    import { getFirestore, doc, updateDoc } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js";
+    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js";
+    import { login } from '/js/login.js';
 
-<!-- TODO: Add SDKs for Firebase products that you want to use -->
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+    // Firebase configuration
+    const firebaseConfig = {
+        apiKey: 'AIzaSyCo9nryMt5uZYsXxcKL7b9uqcxCQ3L6bV0',
+        authDomain: 'cssweng-research-support-hub.firebaseapp.com',
+        projectId: 'cssweng-research-support-hub',
+        storageBucket: 'cssweng-research-support-hub.appspot.com',
+        messagingSenderId: '332020336850',
+        appId: '1:332020336850:web:ac748046a1e82e05e0050b',
+        measurementId: 'G-PDY7DZ01D3'
+    };
 
-<!-- Our script must be loaded after firebase references -->
-<script type="module" src="/js/login.js"></script>
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const auth = getAuth(app);
+
+    // Attach event listener to login button
+    document.getElementById('loginButton').addEventListener('click', function () {
+        console.log('Login button clicked');
+        login(auth, db);
+    });
+</script>
 </body>
 </html>
