--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE: html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -19,5 +19,9 @@
     <a href="/profile">Profile</a>
     <a href="/admin">Admin</a>
   </nav>
-  <a href="/login" class="login-button">Login</a>
+  <div id="auth-controls">
+    <span id="userName">Please Log in</span>
+    <!-- Login or logout button -->
+    <a href="/login" id="authButton" class="login-button">Login</a>
+  </div>
 </header>
