--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,3 @@
-{{!-- home.handlebars --}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/home.css"> <!-- Link to home.css -->
+    <link rel="stylesheet" href="/css/main.css"> <!-- Link to home.css -->
 </head>
 <body>
 <div class="container">
@@ -18,5 +17,6 @@
     </div>
     <div class="image-placeholder"></div>
 </div>
+<script type="module" src="/js/home.js"></script>
 </body>
 </html>
