--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -20,7 +20,7 @@
     <a href="/admin">Admin</a>
   </nav>
   <div id="auth-controls">
-    <span id="userName">Please Log in</span>
+    <span id="userName"></span>
     <!-- Login or logout button -->
     <a href="/login" id="authButton" class="login-button">Login</a>
   </div>
