css fixed for nav elements

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -45,11 +45,32 @@ nav a {
   color: #333;
   font-weight: 500;
 }
+@media screen and (max-width: 500px) {
+  .nav-container{
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .nav a {
+    float: none;
+  }
+  #auth-controls {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  #auth-controls span {
+    float: none;
+  }
+  #auth-controls a {
+    float: none;
+  }
+}
 .login-button {
   background-color: #2cc30a;
   color: white;
   border: none;
-  padding: 10px 20px;
+  padding: 5px 10px;
   border-radius: 5px;
   cursor: pointer;
 }
