--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -10,7 +10,7 @@
 <body>
 <header>
   <!-- <img src="https://via.placeholder.com/150x40?text=" alt="Logo"> -->
-  <nav>
+  <nav class="nav-container">
     <a href="/">Home</a>
     <a href="/resources">Resources</a>
     <a href="/submitResearch">Research Request</a>
