--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,51 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/login.css">
-</head>
-<body>
-<h1></h1>
 <div class="container">
     <div class="content">
         <h1>Login</h1>
+        <label for="email">Email:</label>
         <input type="email" id="email" placeholder="Email" required>
+        <label for="password">Password:</label>
         <input type="password" id="password" placeholder="Password" required>
         <button id="loginButton">Login</button>
         <p>Don't have an account? <a href="/register">Register here</a></p>
     </div>
 </div>
-<!-- Add Firebase products that you want to use -->
-<script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js";
-    import { getFirestore, doc, updateDoc } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js";
-    import { login } from '/js/login.js';
 
-    // Firebase configuration
-    const firebaseConfig = {
-        apiKey: 'AIzaSyCo9nryMt5uZYsXxcKL7b9uqcxCQ3L6bV0',
-        authDomain: 'cssweng-research-support-hub.firebaseapp.com',
-        projectId: 'cssweng-research-support-hub',
-        storageBucket: 'cssweng-research-support-hub.appspot.com',
-        messagingSenderId: '332020336850',
-        appId: '1:332020336850:web:ac748046a1e82e05e0050b',
-        measurementId: 'G-PDY7DZ01D3'
-    };
-
-    // Initialize Firebase
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    const auth = getAuth(app);
-
-    document.getElementById('loginButton').addEventListener('click', function () {
-        console.log('Login button clicked');
-        login(auth, db);
-    });
-</script>
-</body>
-</html>
