--- a/views/res-req.hbs
+++ b/views/res-req.hbs
@@ -48,8 +48,7 @@
     </div>
 </div>
 </body>
-<!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
-<script src="/js/res-req.js"></script>
+
+<script type="module" src="/js/res-req.js"></script>
+
 </html>
