--- a/views/res-resources.hbs
+++ b/views/res-resources.hbs
@@ -36,16 +36,12 @@
                 <span class="type-part">{{typePart}}</span>
                 <h3>{{title}}</h3>
                 <p>{{desc}}</p>
-                <a href="/research-details/{{@key}}" class="button">Participate</a>
+                <a href="/research-details/{{@key}}?userId={{currentUser.uid}}" class="button">Participate</a>
             </div>
             {{/each}}
         </section>
     </main>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js";
-        import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js";
-        import '/js/res-resources.js';
-    </script>
+    <script type="module" src="/js/res-resources.js"></script>
 </body>
 </html>
