--- a/public/css/header.css
+++ b/public/css/header.css
@@ -19,7 +19,7 @@ header {
   nav a {
     text-decoration: none;
     color: #333;
-    font-weight: 500;
+    font-weight: 32rem;
   }
   
   .login-button {
@@ -30,4 +30,5 @@ header {
     border-radius: 0.3125rem;
     cursor: pointer;
   }
+
   
