--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,34 +1,35 @@
 /* public/css/login.css */
 .container {
-  padding: 40px 20px;
-  background-color: #f5f5f5;
+  padding: 2rem 1.2rem;
+  background-color: #ffffff;
   color: #333;
 }
 
 .content {
-  max-width: 400px;
+  max-width: 20rem;
   margin: auto;
 }
 
 .content h1 {
-  font-size: 36px;
+  font-size: 3rem;
   margin-bottom: 20px;
 }
 
-.content form {
+
+.content div {
   display: flex;
   flex-direction: column;
 }
 
 .content label {
-  font-size: 16px;
-  margin-bottom: 10px;
+  font-size: 1rem;
+  margin-bottom: 0.8rem;
 }
 
 .content input {
   margin-bottom: 20px;
   padding: 10px;
-  font-size: 16px;
+  font-size: 1rem;
 }
 
 .content button {
@@ -43,7 +44,7 @@
 
 .content p {
   margin-top: 20px;
-  font-size: 14px;
+  font-size: 1rem;
 }
 
 .content a {
