--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,42 +1,42 @@
 /* public/css/register.css */
 .container {
-    padding: 40px 20px;
+    padding: 2rem 1rem;
     background-color: #f5f5f5;
     color: #333;
   }
   .content {
-    max-width: 400px;
+    max-width: 20rem;
     margin: auto;
   }
   .content h1 {
-    font-size: era 36px;
-    margin-bottom: 20px;
+    font-size: era 0.1rem;
+    margin-bottom: 1rem;
   }
-  .content form {
+  .content div {
     display: flex;
     flex-direction: column;
   }
   .content label {
-    font-size: 16px;
-    margin-bottom: 10px;
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
   }
   .content input {
-    margin-bottom: 20px;
-    padding: 10px;
-    font-size: 16px;
+    margin-bottom: 1rem;
+    padding: 0.6rem;
+    font-size: 0.8rem;
   }
   .content button {
     background-color: #28a745;
     color: white;
     border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
+    padding: 0.3rem 1rem;
+    border-radius: 5rem;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1rem;
   }
   .content p {
-    margin-top: 20px;
-    font-size: 14px;
+    margin-top: 1rem;
+    font-size: 1rem;
   }
   .content a {
     color: #007bff;
