--- a/public/css/res-resources.css
+++ b/public/css/res-resources.css
@@ -1,25 +1,15 @@
-body {
+main {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #343434;
     color: #FFFFFF;
-}
-
-header {
-    background-color: #ffffff;
-    padding: 1rem;
-    text-align: center;
-}
-
-header h1 {
-    margin: 0;
-    color: #FFFFFF;
-}
-
-main {
     padding: 2rem;
 }
+
+/* main {
+    padding: 2rem;
+} */
 
 .research-summary {
     background-color: #424242;
