updated header and footer

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,5 +1,9 @@
-<footer>
-  <p>&copy; 2024 De La Salle University. All rights reserved.</p>
-</footer>
-</body>
-</html>
+<main class="wrapper">
+  <div class="container">
+    <footer>
+      <p>&copy; 2024 De La Salle University. All rights reserved.</p>
+    </footer>
+    </body>
+    </html>
+  </div>
+</main>
