--- a/views/res-resources.hbs
+++ b/views/res-resources.hbs
@@ -13,6 +13,7 @@
     <header2 class="header2">
         <h1>Research Resources</h1>
     </header2>
+    <section class="research-summary">
     <main class="wrapper">
         <div class="container">
             <div class="content">
@@ -22,6 +23,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
         </div>
+    </section>
+    <section class="research-search">
         <div class="container">
             <div class="search-container">
                 <div class="search-dropdown">
@@ -35,6 +38,8 @@
                 <button class="search-button"><i class="fa fa-search"></i></button>
             </div>
         </div>
+    </section>
+     <section class="research-list">
         <div class="container">
             <div class="content">
                 {{#each researchRequests}}
@@ -47,6 +52,7 @@
                 {{/each}}
             </div>
         </div>
+    </section>
     </main>
     <script type="module" src="/js/res-resources.js"></script>
 </html>
