--- a/public/css/main.css
+++ b/public/css/main.css
@@ -91,9 +91,7 @@ nav a, #auth-controls {
 }
 
 .login-button {
-  margin-left: auto;
-  margin-right: auto;
-  gap: 20px;
+  margin-left: 20px;
 }
 
 nav a {
@@ -110,7 +108,6 @@ nav a {
   border-radius: 20px;
   cursor: pointer;
 }
-
 
 /* public/css/styles.css */
 body {
@@ -211,6 +208,6 @@ footer {
   }
 }
 
-
-
-
+nav a:active {
+  font-weight: bold;
+}
