--- a/public/css/register.css
+++ b/public/css/register.css
@@ -25,6 +25,15 @@
     padding: 0.6rem;
     font-size: 0.8rem;
   }
+  .content button {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 0.3rem 1rem;
+    border-radius: 5rem;
+    cursor: pointer;
+    font-size: 1rem;
+  }
 
   .content select {
     margin-bottom: 1rem;
