--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -13,7 +13,7 @@
     <a href="/profile">Profile</a>
     <a href="/admin">Admin</a>
     <div id="auth-controls">
-      <a><span id="userName"></span></a>
+      <span id="userName"></span>
       <!-- Login or logout button -->
       <a href="/login" id="authButton" class="login-button">Login</a>
     </div>
