--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,8 +1,8 @@
 /* public/css/login.css */
 .container {
   padding: 2rem 1.2rem;
-  background-color: #ffffff;
-  color: #333;
+  background-color: #333;
+  color: #ffffff;
 }
 
 .content {
