--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@
 /* Global CSS variables */
 :root {
   --primary: #6e2a73;
-  --confirm: #238636;
+  --confirm: #43B570;
   --danger: #f85149;
   --heading: 32px;
   --body: 16px;
