--- a/views/edit-research.hbs
+++ b/views/edit-research.hbs
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Research Request</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/edit-research.css">
-</head>
 <body>
     <header2 class="header2">
         <h1>Edit Research Request</h1>
@@ -38,7 +27,7 @@
                 </div>
                 <div>
                     <label for="dg_link">Link</label>
-                    <input type="text" id="dg_link" name="dg_link" required>
+                    <input type="text" id="dg_link" name="dg_link">
                 </div>
                 <div>
                     <label for="start_date">Start Date</label>
@@ -54,6 +43,5 @@
             </form>
         </div>
     </main>
-    <script type="module" src="/js/edit-research.js"></script>
 </body>
-</html>
+
