--- a/views/res-resources.hbs
+++ b/views/res-resources.hbs
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Resources</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/res-resources.css">
-    <link rel="stylesheet" href="/css/header2.css">
-</head>
 <body>
     <header2 class="header2">
         <h1>Research Resources</h1>
@@ -47,7 +35,7 @@
                         {{#ifEquals userId currentUser.uid}}
                             <a href="/edit-research/{{@key}}" class="button">Edit</a>
                         {{else}}
-                            <a href="/research-details/{{@key}}?userId={{currentUser.uid}}" class="button">Participate</a>
+                            <a href="/res-details/{{@key}}?userId={{currentUser.uid}}" class="button">Participate</a>
                         {{/ifEquals}}
                     </div>
                 </div>
@@ -55,6 +43,5 @@
             </div>
         </div>
     </main>
-    <script type="module" src="/js/res-resources.js"></script>
 </body>
-</html>
+
