--- a/public/css/header2.css
+++ b/public/css/header2.css
@@ -1,7 +1,7 @@
 .header2 {
   display: flex;
   justify-content: center;
-  background-color: #00703C; 
+  background-color: #43B570; 
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 0px;
@@ -9,7 +9,7 @@
 }
 
 .header2 h1 {
-  background-color: #00703C;
+  background-color: #43B570;
   color: #ffffff;
   font-size: 36px;
   max-width: 1050px;
