--- a/public/css/register.css
+++ b/public/css/register.css
@@ -26,7 +26,7 @@
     font-size: 0.8rem;
   }
   .content button {
-    background-color: #28a745;
+    background-color: #43B570;
     color: white;
     border: none;
     padding: 0.3rem 1rem;
