--- a/views/res-resources.hbs
+++ b/views/res-resources.hbs
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Resources</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/res-resources.css">
-    <link rel="stylesheet" href="/css/header2.css">
-</head>
 <body>
     <header2 class="header2">
         <h1>Research Resources</h1>
@@ -39,18 +27,21 @@
         <div class="container">
             <div class="research-list">
                 {{#each researchRequests}}
-                <div class="research-card">
+                <div class="research-card" data-user-id="{{userId}}">
                     <span class="type-part">{{typePart}}</span>
                     <h3>{{title}}</h3>
                     <p>{{desc}}</p>
                     <div class="button-container">
-                        <a href="/research-details/{{@key}}?userId={{currentUser.uid}}" class="button">Participate</a>
+                        {{#ifEquals userId currentUser.uid}}
+                            <a href="/edit-research/{{@key}}" class="button">Edit</a>
+                        {{else}}
+                            <a href="/res-details/{{@key}}?userId={{currentUser.uid}}" class="button">Participate</a>
+                        {{/ifEquals}}
                     </div>
                 </div>
                 {{/each}}
             </div>
         </div>
     </main>
-    <script type="module" src="/js/res-resources.js"></script>
 </body>
-</html>
+
