--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,8 +2,8 @@
         <div class="container">
             <div class="content">
                 <h1>Login</h1>
-                <label for="email">Email:</label>
-                <input type="email" id="email" placeholder="Email" required>
+                <label for="identifier">ID/Email:</label>
+                <input type="text" id="identifier" name="identifier" placeholder="ID or Email" required>
                 <label for="password">Password:</label>
                 <input type="password" id="password" placeholder="Password" required>
                 <button id="loginButton">Login</button>
