--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,7 +47,7 @@ nav a {
 }
 .login-button {
   background-color: #ffffff;
-  color: white;
+  color: rgb(0, 0, 0);
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
