--- a/public/css/header.css
+++ b/public/css/header.css
@@ -24,7 +24,7 @@ header {
   
   .login-button {
     background-color: var(--confirm);
-    color: white;
+    color: rgb(37, 217, 25);
     border: none;
     padding: 0.625rem 1.25rem;
     border-radius: 0.3125rem;
