--- a/public/css/res-resources.css
+++ b/public/css/res-resources.css
@@ -96,7 +96,7 @@
   }
 
 .research-card {
-  background-color: #45454B;
+  background-color: #555555;
   padding: 1.5rem;
   border-radius: 5px;
   box-sizing: border-box;
