--- a/public/css/header2.css
+++ b/public/css/header2.css
@@ -1,7 +1,7 @@
 .header2 {
   display: flex;
   justify-content: center;
-  background-color: #43B570; 
+  background-color: #03713e; 
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 0px;
@@ -9,12 +9,12 @@
 }
 
 .header2 h1 {
-  background-color: #43B570;
   color: #ffffff;
   font-size: 36px;
   max-width: 1050px;
   margin: 0;
   padding: 5px 0px;
+  padding-left: 20px;
   box-sizing: border-box; 
   width: 100%;
 }
