--- a/public/css/main.css
+++ b/public/css/main.css
@@ -134,6 +134,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 30px;
+  margin-top: 20px
 }
 
 .container {
@@ -168,6 +169,16 @@ body {
   height: 300px;
   background-color: #555;
   border-radius: 20px;
+}
+
+.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;     
+  height: 100vh;        
+  width: 100%;           
+  padding: 20px;         
+  box-sizing: border-box; 
 }
 
 /* page layout  */
