--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,4 +1,5 @@
-    <body>
+<body>
+    <main class="wrapper">
         <div class="container">
             <div class="content">
                 <h1>Profile</h1>
@@ -8,5 +9,5 @@
             </div>
             <div class="image-placeholder"></div>
         </div>
-    </body>
-
+    </main>
+</body> 
