--- a/views/res-details.hbs
+++ b/views/res-details.hbs
@@ -1,22 +1,21 @@
-    <body>
-        <main>
-            <section class="research-details">
-                <h2 id="research-title"></h2>
-                <p id="research-desc"></p>
-                <p id="research-method"></p>
-                <p id="research-type"></p>
-                <p id="research-link"></p>
-                <p id="research-dates"></p>
-            </section>
-            <section class="proof-of-participation">
-                <h3>Submit Proof of Participation</h3>
-                <form id="proofForm">
-                    <input type="hidden" id="userId" name="userId" value="{{userId}}">
-                    <input type="hidden" id="researchId" name="researchId" value="{{researchId}}">
-                    <input type="file" id="proofFile" accept="image/jpeg,image/png" required>
-                    <button type="submit">Submit</button>
-                </form>
-            </section>
-        </main>
-    </body>
-
+<body>
+    <main class="wrapper">
+        <section class="research-details">
+            <h2 id="research-title"></h2>
+            <p id="research-desc"></p>
+            <p id="research-method"></p>
+            <p id="research-type"></p>
+            <p id="research-link"></p>
+            <p id="research-dates"></p>
+        </section>
+        <section class="proof-of-participation">
+            <h3>Submit Proof of Participation</h3>
+            <form id="proofForm">
+                <input type="hidden" id="userId" name="userId" value="{{userId}}">
+                <input type="hidden" id="researchId" name="researchId" value="{{researchId}}">
+                <input type="file" id="proofFile" accept="image/jpeg,image/png" required>
+                <button type="submit" class="button">Submit</button>
+            </form>
+        </section>
+    </main>
+</body>
