--- a/views/edit-research.hbs
+++ b/views/edit-research.hbs
@@ -2,46 +2,45 @@
     <header2 class="header2">
         <h1>Edit Research Request</h1>
     </header2>
-    <main class="wrapper">
-        <div class="container">
-            <form id="editResearchForm">
-                <div>
-                    <label for="title">Title</label>
-                    <input type="text" id="title" name="title" required>
+
+    <main class="wrapper"> 
+        <div class="form-container">
+            <div class="container">
+                <div class="content">
+                    <h1>Edit Details</h1>
+        
+                        <form id="editResearchForm">
+                            <div>
+                                <label for="title">Title</label>
+                                <input type="text" id="title" name="title" required>
+                        
+                                <label for="desc">Description</label>
+                                <textarea id="desc" name="desc" required></textarea>
+                        
+                                <label for="contact">Contact</label>
+                                <input type="text" id="contact" name="contact" required>
+                        
+                                <label for="dg_method">Method</label>
+                                <input type="text" id="dg_method" name="dg_method" required>
+                        
+                                <label for="typeOfParticipation">Type of Participation</label>
+                                <input type="text" id="typeOfParticipation" name="typeOfParticipation" required>
+                        
+                                <label for="dg_link">Link</label>
+                                <input type="text" id="dg_link" name="dg_link">
+                        
+                                <label for="start_date">Start Date</label>
+                                <input type="date" id="start_date" name="start_date" required>
+                        
+                                <label for="end_date">End Date</label>
+                                <input type="date" id="end_date" name="end_date" required>
+                            
+                                <button type="submit">Update Research Request</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div>
-                    <label for="desc">Description</label>
-                    <textarea id="desc" name="desc" required></textarea>
-                </div>
-                <div>
-                    <label for="contact">Contact</label>
-                    <input type="text" id="contact" name="contact" required>
-                </div>
-                <div>
-                    <label for="dg_method">Method</label>
-                    <input type="text" id="dg_method" name="dg_method" required>
-                </div>
-                <div>
-                    <label for="typeOfParticipation">Type of Participation</label>
-                    <input type="text" id="typeOfParticipation" name="typeOfParticipation" required>
-                </div>
-                <div>
-                    <label for="dg_link">Link</label>
-                    <input type="text" id="dg_link" name="dg_link">
-                </div>
-                <div>
-                    <label for="start_date">Start Date</label>
-                    <input type="date" id="start_date" name="start_date" required>
-                </div>
-                <div>
-                    <label for="end_date">End Date</label>
-                    <input type="date" id="end_date" name="end_date" required>
-                </div>
-                <div>
-                    <button type="submit">Update Research Request</button>
-                </div>
-            </form>
+            </div>
         </div>
     </main>
 </body>
-
