--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,3 +1,4 @@
+<body>
     <main class="wrapper">
         <div class="container">
             <div class="content">
@@ -19,3 +20,4 @@
             <div class="image-placeholder"></div>
         </div>
     </main>
+</body>
