--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,4 @@
+<body>
     <main class="wrapper">
         <div class="container">
             <div class="content">
@@ -11,5 +12,6 @@
             </div>
         </div>
     </main>
+</body>
 
 
