--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,3 +1,4 @@
+<body>
     <main class="wrapper">
         <div class="container">
             <div class="content">
@@ -17,3 +18,4 @@
             </div>
         </div>
     </main>
+</body> 
