--- a/public/css/main.css
+++ b/public/css/main.css
@@ -174,11 +174,9 @@ body {
 .form-container {
   display: flex;
   justify-content: center;
-  align-items: center;     
-  height: 100vh;        
+  height: 100;        
   width: 100%;           
   padding: 20px;         
-  box-sizing: border-box; 
 }
 
 /* page layout  */
