--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,10 +8,10 @@
     <a href="/">Home</a>
     <a href="/res-resources">Resources</a>
     <a href="/res-req">Research Request</a>
-    <a href="/about">About Us</a>
+    <a href="/about-us">About Us</a>
     <a href="/faq">FAQ</a>
     <a href="/profile">Profile</a>
-    <a href="/admin">Admin</a>
+    <a href="/admin" class="admin-link">Admin</a>
     <div id="auth-controls">
       <span id="userName"></span>
       <!-- Login or logout button -->
