--- a/public/css/res-request.css
+++ b/public/css/res-request.css
@@ -1,7 +1,6 @@
 #resReqForm {
     display: flex;
     flex-direction: column; 
-    max-width: 600px; 
     width: 100%; 
     padding: 20px; 
     background-color: #ffffff;
@@ -14,7 +13,6 @@
     color: #45454B;
     margin-bottom: 5px;
 }
-
 
 #resReqForm input[type="text"],
 #resReqForm input[type="email"],
@@ -29,11 +27,18 @@
     font-size: 16px;
     width: 100%;
     box-sizing: border-box;
+    font-family: inherit;
+    color: #45454B;
 }
 
 #resReqForm textarea {
     height: 100px;
     resize: vertical;
+}
+
+#resReqForm textarea#desc {
+    height: 120px;
+    resize: none;
 }
 
 #resReqForm button {
@@ -49,4 +54,19 @@
 
 #resReqForm button:hover {
     background-color: #03713e;
+}
+
+
+.form-columns {
+    display: flex;
+    gap: 20px;
+}
+
+.form-columns .column {
+    flex: 1;
+}
+
+.button-container {
+    display: flex;
+    margin-top: 10px;
 }
