--- a/views/res-req.hbs
+++ b/views/res-req.hbs
@@ -4,18 +4,18 @@
     </header2>
 
     <main class="wrapper"> 
-        <div class="form-container">
-            <div class="container">
-                <div class="content">
-                    <h1>Request for Participants</h1>
-                    <form id="resReqForm">
-                        <div>
-                            <label for="title">Title:</label>
-                            <input type="text" id="title" name="title" placeholder="Enter Research Title" required>
+        <div class="container">
+            <form id="resReqForm">
+                <h3 style="color: #45454b;">Request for Participants</h3>
+                <div>
+                    <label for="title">Title:</label>
+                    <input type="text" id="title" name="title" placeholder="Enter Research Title" required>
 
-                            <label for="desc">Description:</label>
-                            <input type="text" id="desc" name="desc" placeholder="Write a description" required>
+                    <label for="desc">Description:</label>
+                    <textarea id="desc" name="desc" placeholder="Write a description" required></textarea>
 
+                    <div class="form-columns">
+                        <div class="column">
                             <label for="contact">Contact Details (Email):</label>
                             <input type="email" id="contact" name="contact" placeholder="someone@gmail.com" required>
 
@@ -27,7 +27,9 @@
 
                             <label for="typeOfParticipation">Type of Participation:</label>
                             <input type="text" id="typeOfParticipation" name="typeOfParticipation" placeholder="Survey, Interview, etc." required>
+                        </div>
 
+                        <div class="column">
                             <label for="dg_link">Forms Link:</label>
                             <input type="url" id="dg_link" name="dg_link" placeholder="(For Surveys) Enter Link">
 
@@ -36,12 +38,14 @@
 
                             <label for="end_date">End Date:</label>
                             <input type="date" id="end_date" name="end_date" required>
-
-                            <button type="submit" id="submitReqButton">Submit</button>
                         </div>
-                    </form>
-                </div> 
-            </div>
+                    </div>
+
+                    <div class="button-container">
+                        <button type="submit" id="submitReqButton">Submit</button>
+                    </div>
+                </div>
+            </form>
         </div>
     </main>
 </body>
