--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,8 +1,8 @@
 /* public/css/login.css */
 .container {
   padding: 2rem 1.2rem;
-  background-color: #ffffff;
-  color: #333;
+  background-color: #333;
+  color: #ffffff;
 }
 
 .content {
@@ -33,7 +33,7 @@
 }
 
 .content button {
-  background-color: #28a745;
+  background-color: #43B570;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -63,7 +63,7 @@ button {
   display: block;
   width: 100%;
   padding: 10px;
-  background-color: #4CAF50;
+  background-color: #43B570;
   color: white;
   border: none;
   cursor: pointer;
