--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@
 /* Global CSS variables */
 :root {
   --primary: #6e2a73;
-  --confirm: #238636;
+  --confirm: #43B570;
   --danger: #f85149;
   --heading: 32px;
   --body: 16px;
@@ -25,34 +25,101 @@ html {
 
 /* public/css/header.css */
 header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
   display: flex;
+  flex-direction: column;
   align-items: center;
   background-color: white;
-  padding: 10px 20px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
 header img {
   height: 40px;
 }
+
+.top-row {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
+  padding: 13px;
+  width: 100%;
+  border-bottom: 1px solid #ddd;
+}
+
+.top-text {
+  font-size: 24px;
+  font-weight: bold;
+  color: #00703C;
+}
+
+.bottom-text {
+  font-size: 17px;
+  color: #333;
+}
+
+.nav-container {
+  max-width: 1100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 nav {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+nav a, #auth-controls {
+  flex-grow: 1;
+  text-align: center;
+}
+
+#auth-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.login-button {
   margin-left: auto;
   margin-right: auto;
   gap: 20px;
 }
+
 nav a {
   text-decoration: none;
-  color: #333;
+  color: #45454B;
   font-weight: 500;
 }
+
 .login-button {
-  background-color: #ffffff;
-  color: rgb(0, 0, 0);
+  background-color: #43B570;
+  color: white;
   border: none;
   padding: 10px 20px;
-  border-radius: 5px;
+  border-radius: 20px;
   cursor: pointer;
 }
+
+/* footer  */
+footer {
+  display: flex;
+  align-items: center;
+  background-color: #333;
+  padding: 10px 20px;
+  width: 100%;
+}
+
 
 /* public/css/styles.css */
 body {
@@ -60,13 +127,21 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #f5f5f5;
+  background-color: #333;
 }
+
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 30px;
+  margin-top: 20px
+}
+
 .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 40px 20px;
+  padding: 30px 60px;
   background-color: #333;
   color: white;
 }
@@ -75,31 +150,37 @@ body {
 }
 .content h1 {
   font-size: 36px;
-  margin-bottom: 20px;
 }
 .content p {
   font-size: 16px;
-  line-height: 1.6;
-  margin-bottom: 20px;
+  line-height: 2;
 }
 .content button {
-  background-color: #28a745;
+  background-color: #43b671;
   color: white;
   border: none;
   padding: 10px 20px;
-  border-radius: 5px;
+  border-radius: 20px;
   cursor: pointer;
   font-size: 16px;
 }
 .image-placeholder {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   background-color: #555;
   border-radius: 20px;
 }
 
-/* page layout  */
+.form-container {
+  display: flex;
+  justify-content: center;
+  height: 100;        
+  width: 100%;           
+  padding: 20px;   
+  color: white;      
+}
 
+/* page layout  */
 #page-layout {
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 0.375rem;
@@ -117,3 +198,30 @@ body {
 
   text-transform: uppercase;
 }
+
+
+/* Mobile */
+@media (max-width: 768px) {
+  nav a, #auth-controls {
+    font-size: 8px;
+  }
+
+  .container {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .content {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .image-placeholder {
+    width: 100%;
+    height: auto;
+  }
+}
+
+
+
+
