--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,8 +1,8 @@
 /* public/css/register.css */
 .container {
     padding: 2rem 1rem;
-    background-color: #f5f5f5;
-    color: #333;
+    background-color: #333;
+    color: #ffffff;
   }
   .content {
     max-width: 20rem;
@@ -26,7 +26,7 @@
     font-size: 0.8rem;
   }
   .content button {
-    background-color: #28a745;
+    background-color: #43B570;
     color: white;
     border: none;
     padding: 0.3rem 1rem;
@@ -34,6 +34,13 @@
     cursor: pointer;
     font-size: 1rem;
   }
+
+  .content select {
+    margin-bottom: 1rem;
+    padding: 0.6rem;
+    font-size: 0.8rem;
+  }
+  
   .content p {
     margin-top: 1rem;
     font-size: 1rem;
