--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,12 +1,13 @@
-<div class="container">
-    <div class="content">
-        <h1>Login</h1>
-        <label for="identifier">ID/Email:</label>
-        <input type="text" id="identifier" name="identifier" placeholder="ID or Email" required>
-        <label for="password">Password:</label>
-        <input type="password" id="password" placeholder="Password" required>
-        <button id="loginButton">Login</button>
-        <p>Don't have an account? <a href="/register">Register here</a></p>
-    </div>
-</div>
-
+    <main class="wrapper">
+        <div class="container">
+            <div class="content">
+                <h1>Login</h1>
+                <label for="identifier">ID/Email:</label>
+                <input type="text" id="identifier" name="identifier" placeholder="ID or Email" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" placeholder="Password" required>
+                <button id="loginButton">Login</button>
+                <p>Don't have an account? <a href="/register">Register here</a></p>
+            </div>
+        </div>
+    </main>
