--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,17 +1,21 @@
 <header>
-  <!-- <img src="https://via.placeholder.com/150x40?text=" alt="Logo"> -->
+  <div class="top-row">
+    <!-- <img src="https://via.placeholder.com/150x40?text=" alt="Logo"> -->
+    <span class="top-text">Research Support Hub</span>
+    <span class="bottom-text">University Student Government</span>
+  </div>
   <nav class="nav-container">
     <a href="/">Home</a>
-    <a href="/resources">Resources</a>
-    <a href="/submitResearch">Research Request</a>
-    <a href="/about">About Us</a>
+    <a href="/res-resources">Resources</a>
+    <a href="/res-req">Research Request</a>
+    <a href="/about-us">About Us</a>
     <a href="/faq">FAQ</a>
     <a href="/profile">Profile</a>
-    <a href="/admin">Admin</a>
+    <a href="/admin" class="admin-link">Admin</a>
+    <div id="auth-controls">
+      <span id="userName"></span>
+      <!-- Login or logout button -->
+      <a href="/login" id="authButton" class="login-button">Login</a>
+    </div>
   </nav>
-  <div id="auth-controls">
-    <span id="userName"></span>
-    <!-- Login or logout button -->
-    <a href="/login" id="authButton" class="login-button">Login</a>
-  </div>
 </header>
