--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,9 +1,13 @@
-<div class="container">
-    <div class="content">
-        <h1>Profile</h1>
-        <p id="idNumber">ID number: Loading...</p>
-        <p id="fullName">Full Name: Loading...</p>
-        <p id="email">Email: Loading...</p>
-    </div>
-    <div class="image-placeholder"></div>
-</div>
+<body>
+    <main class="wrapper">
+        <div class="container">
+            <div class="content">
+                <h1>Profile</h1>
+                <p id="idNumber">ID number: Loading...</p>
+                <p id="fullName">Full Name: Loading...</p>
+                <p id="email">Email: Loading...</p>
+            </div>
+            <div class="image-placeholder"></div>
+        </div>
+    </main>
+</body> 
