--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,19 +1,21 @@
-{{!-- register.hbs --}}
-<div class="container">
-    <div class="content">
-        <h1>Register</h1>
-        <div>
-            <label for="id">ID Number:</label>
-            <input type="text" id="id" name="ID" placeholder="ID Number" required>
-            <label for="fullName">Full Name:</label>
-            <input type="text" id="fullName" name="Full Name" placeholder="Full Name" required>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Email" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Password" required>
-            <button id="registerButton">Register</button>
+<body>
+    <main class="wrapper">
+        <div class="container">
+            <div class="content">
+                <h1>Register</h1>
+                <div>
+                    <label for="id">ID Number:</label>
+                    <input type="text" id="id" name="ID" placeholder="ID Number" required>
+                    <label for="fullName">Full Name:</label>
+                    <input type="text" id="fullName" name="Full Name" placeholder="Full Name" required>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" placeholder="Password" required>
+                    <button id="registerButton">Register</button>
+                </div>
+                <p>Already have an account? <a href="/login">Login here</a></p>
+            </div>
         </div>
-        <p>Already have an account? <a href="/login">Login here</a></p>
-    </div>
-</div>
-
+    </main>
+</body> 
