--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -6,6 +6,7 @@
                 <p id="idNumber">ID number: Loading...</p>
                 <p id="fullName">Full Name: Loading...</p>
                 <p id="email">Email: Loading...</p>
+                <p id="points">Points: Loading...</p>
             </div>
             <div class="image-placeholder"></div>
         </div>
